Remember paths for Copy-To and Move-To

BUG: 362474
FIXED-IN: 17.08.1

Differential Revision: https://phabricator.kde.org/D6379